fixed a few bugs and made a few improvements to collection management browse

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -120,6 +120,9 @@ en:
       creators: Creator
       source: Source
       rules: Rules
+      parent_type: Record Type
+      processing_priority: Priority
+      processing_status: Status
   search_sorting:
     sort_by: "Sort by:"
     asc: Ascending
