--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -77,6 +77,7 @@ en:
     login_success: Login Successful. Redirecting...
     register: Register now
     register_prefix: Need an account?
+    list_reports: Reports
   welcome:
     heading: Welcome to ArchivesSpace
     message: Your friendly archives management tool.
@@ -2412,4 +2413,15 @@ en:
         name_selector_tooltip: |
             <p>The enumeration to edit.</p>
         no_name_provided: Select an Enumeration Name before creating a new value
-        
+  reports:
+    CreatedAccessionsReport: Created Accessions
+    UnprocessedAccessionsReport: Unprocessed Accessions
+    parameters:
+      from: From
+      to: To
+    formats:
+      json: JSON
+      csv: CSV
+      xlsx: XLSX (Excel)
+      pdf: PDF
+      html: HTML
