--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -27,9 +27,11 @@ en:
     save_plus_one: "+1"
     save_anyway: Save Anyway
     select: Select
+    set_default: Set as Default
     suppress: Suppress
     suppress_confirm_title: Suppress this Record?
     suppress_confirm_message: While a suppressed record will remain in the database, it will become hidden to most users and unavailable to most functions.
+    unset_default: Unset Default
     unsuppress: Unsuppress
     unsuppress_confirm_title: Unsuppress this Record?
     unsuppress_confirm_message: false
