Allow modification of a user's groups for a repo

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
     container_labels: Download Container Labels
     create: Create
     edit: Edit
+    edit_groups: Edit Groups
     view: View
     spawn: Spawn
     link_to: Link To
@@ -72,6 +73,7 @@ en:
     manage_groups: Manage Groups
     manage_users: Manage Users
     manage_enumerations: Manage Enumerations
+    manage_user_access: Manage User Access
     logout: Logout
     login: Sign In
     login_expired_link: Please %{link} again.
@@ -2315,6 +2317,7 @@ en:
         error_update: User not saved
         error_create: User not created
       section:
+        manage_access: Manage User Access
         account: Account
         edit_account: Edit Account
         edit_account_submit: Update Account
@@ -2380,7 +2383,7 @@ en:
     _html:
       singular: Collection Management
       plural: Collection Management
-      title_prefix: Processing 
+      title_prefix: Processing
   enumeration:
     # tooltips not displaying
     name: Name
