--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -65,11 +65,7 @@ en:
     import_digital_object_csv: Digital Object CSV
     search_all: All Records
     search_placeholder: Search
-    create_repository_tooltip: "To create your first Repository, click the <span class='btn btn-mini dropdown-toggle'><span class='caret'></span></span> above and then the <strong>Manage Repositories</strong> link.."
-    repositories_none: No Repositories Available
-    repositories_none_tooltip: "<p>You do not have access to any Repositories.</p><p>Please contact your System Administrator to request access.</p>"
     repositories_manage: Manage Repositories
-    repositories_select: Select a Repository
     manage_groups: Manage Groups
     manage_users: Manage Users
     manage_enumerations: Manage Enumerations
@@ -2266,6 +2262,8 @@ en:
         selected: Repository is Currently Selected
         selected_short: Selected
         changed: The repository '%{repo_code}' is now active
+        create_first_repository: "To create your first Repository, click the <strong>System</strong> menu above and then <strong>Manage Repositories</strong>."
+        no_access_to_repositories: "<p>You do not have access to any Repositories.</p><p>Please contact your System Administrator to request access.</p>"
       section:
         all_fields: Repository Fields
       action:
