Link resources to their digital object instances; Fix record icon in the linker widget;

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -924,3 +924,11 @@ en:
       section:
         components: Components
         summary: Summary
+  file_version:
+    _html:
+      plural: File Versions
+      singular: File Version
+  linked_instance:
+    _html:
+      plural: Instance Of
+      singular: Instance Of
