--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -6,6 +6,8 @@ en:
   errors:
     error_404: Record Not Found
     error_404_message: "The record you've tried to access does not exist or may have been removed."
+    backend_down: Unable to Connect to Database
+    backend_down_message: ArchivesSpace is currently experiencing technical difficulties. We apologise for the inconvenience. Please try again later.
   navbar:
     search_placeholder: Search the Archive
     search_all: All Records
