Add 'Event' type to date subrecord.

--- a/frontend/config/locales/enums/en.yml
+++ b/frontend/config/locales/enums/en.yml
@@ -932,6 +932,7 @@ en:
       deaccession: Deaccession
       agent_relation: Agent Relation
       digitized: Digitized
+      event: Event
       issued: Issued
       modified: Modified
       publication: Publication
