--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -36,7 +36,7 @@ en:
     unset_default: Unset Default
     unsuppress: Unsuppress
     unsuppress_confirm_title: Unsuppress this Record?
-    unsuppress_confirm_message: false
+    unsuppress_confirm_message: "false"
     delete: Delete
     delete_confirm_title: Delete this Record?
     delete_confirm_message: "<p>Please be aware <strong>you cannot undo this action</strong>.</p><p>This action will remove the record from the database, including any references it has to other records.</p>"
@@ -212,8 +212,8 @@ en:
       singular: Digital Object
       plural: Digital Objects
       messages:
-        created: Digital Object Created
-        updated: Digital Object Saved
+        created: "Digital Object <strong>%{digital_object.title}</strong> Created"
+        updated: "Digital Object <strong>%{digital_object.title}</strong> Updated"
       section:
         basic_information: Basic Information
   digital_object_component:
@@ -236,8 +236,10 @@ en:
       singular: Digital Object Component
       plural: Digital Object Components
       messages:
-        created: Digital Object Component Created
-        updated: Digital Object Component Saved
+        created_with_parent: Digital Object Component <strong>%{digital_object_component.title}</strong> created as child of <strong>%{parent.title}</strong> on Digital Object <strong>%{digital_object.title}</strong>
+        created: Digital Object Component <strong>%{digital_object_component.title}</strong> created on Digital Object <strong>%{digital_object.title}</strong>
+        updated_with_parent: Digital Object Component <strong>%{digital_object_component.title}</strong> updated
+        updated: Digital Object Component <strong>%{digital_object_component.title}</strong> updated
       section:
         basic_information: Basic Information
   location:
@@ -1176,12 +1178,12 @@ en:
       singular: Accession
       plural: Accessions
       messages:
-        created: Accession Created
-        unsuppressed: Accession Unsuppressed
-        updated: Accession Saved
-        suppressed: Accession Suppressed
+        created: Accession <strong>%{accession.title}</strong> created
+        unsuppressed: Accession <strong>%{accession.title}</strong> unsuppressed
+        updated: Accession <strong>%{accession.title}</strong> updated
+        suppressed: Accession <strong>%{accession.title}</strong> suppressed
         suppressed_info: Accession is suppressed and cannot be edited
-        deleted: Accession Deleted
+        deleted: Accession <strong>%{accession.title}</strong> deleted
       section:
         basic_information: Basic Information
   agent: &agent_attributes
@@ -1271,11 +1273,13 @@ en:
       singular: Archival Object
       plural: Archival Objects
       messages:
-        created: Archival Object Created
-        updated: Archival Object Saved
+        created: Archival Object <strong>%{archival_object.title}</strong> on Resource <strong>%{resource.title}</strong> created
+        created_with_parent: Archival Object <strong>%{archival_object.title}</strong> created as child of <strong>%{parent.title}</strong> on Resource <strong>%{resource.title}</strong>
+        updated: Archival Object <strong>%{archival_object.title}</strong> updated
+        updated_with_parent: Archival Object <strong>%{archival_object.title}</strong> updated
         please_select_a_resource_for_transfer: Please choose a Resource
-        transfer_success: Archival Object Transferred
-        transfer_error: Unable to transfer Archival Object due to a conflict
+        transfer_success: Successfully transferred Archival Object <strong>%{archival_object.title}</strong> to Resource <strong>%{resource.title}</strong>
+        transfer_error: "Unable to transfer Archival Object due to an error or conflict: <pre>%{exception}</pre>"
       section:
         basic_information: Basic Information
   group:
@@ -1390,9 +1394,9 @@ en:
       singular: Resource
       plural: Resources
       messages:
-        created: Resource Created
-        updated: Resource Saved
-        spawned: Resource spawned from Accession
+        created: "Resource <strong>%{resource.title}</strong> created"
+        updated: "Resource <strong>%{resource.title}</strong> updated"
+        spawned: "A new Resource has been spawned from Accession <strong>%{accession.title}</strong>"
       section:
         basic_information: Basic Information
         finding_aid: Finding Aid Data
@@ -1467,7 +1471,7 @@ en:
         updated: Repository Saved
         selected: Repository is Currently Selected
         selected_short: Selected
-        changed: The repository '%{repo_code}' is now active
+        changed: The Repository <strong>%{repository.repo_code}</strong> is now active
         create_first_repository: "To create your first Repository, click the <strong>System</strong> menu above and then <strong>Manage Repositories</strong>."
         no_access_to_repositories: "<p>You do not have access to any Repositories.</p><p>Please contact your System Administrator to request access.</p>"
       section:
