WIP extra subrecord add buttons and refactored note forms to remove the dropdown buttons

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -685,6 +685,7 @@ en:
       singular: Associative Relationship
   note:
     item: Item
+    content_item: Content Item
     note_singlepart: Single Part Note
     note_orderedlist: Ordered List
     note_multipart: Multipart Note
