[Delivers #43558175] Add RDA to agent name form rules enum

--- a/frontend/config/locales/enums/en.yml
+++ b/frontend/config/locales/enums/en.yml
@@ -247,6 +247,7 @@ en:
       local: Local rules
       aacr: Anglo-American Cataloging Rules
       dacs: "Describing Archives: A Content Standard"
+      rda: "Resource Description and Access"
     extent_extent_type:
       cassettes: Cassettes
       cubic_feet: Cubic Feet
