--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -150,6 +150,11 @@ en:
   linker:
     link_to_prefix: Link to
     create_and_link_to_prefix: Create and Link to
+    hint_text: Type to search available records..
+    placeholder: Type to search available records..
+    no_results: No matching results.  Try 'Browse'.
+    searching: Searching...
+    delete: "&times;"
   mixed_content:
     wrap_prefix: "Wrap with:"
     help: "Mixed Content Enabled&#160;&#160;--&#160;&#160;Type '<' for elements or highlight text to wrap"
