Refactor terms subrecord to use the subrecord.js instead of its own templates

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1527,6 +1527,7 @@ en:
         <li>Library of Congress Subject Headings (lcsh)</li>
         </ul>
     scope_note: Scope Note
+    terms: Terms
     heading: Subject Heading
     _html:
       singular: Subject
