Index the subject's first term type as first_term_type and as facet in index

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -99,6 +99,7 @@ en:
       temporary: Temporary
       outcome: Outcome
       event_type: Type
+      first_term_type: Term Type (First)
   search_sorting:
     sort_by: "Sort by:"
     asc: Ascending
