--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -197,6 +197,7 @@ en:
       messages:
         created: "Digital Object <strong>%{digital_object.title}</strong> Created"
         updated: "Digital Object <strong>%{digital_object.title}</strong> Updated"
+        deleted: "Digital Object <strong>%{digital_object.title}</strong> Deleted"
       section:
         basic_information: Basic Information
       action:
@@ -209,6 +210,7 @@ en:
         created: Digital Object Component <strong>%{digital_object_component.title}</strong> created on Digital Object <strong>%{digital_object.title}</strong>
         updated_with_parent: Digital Object Component <strong>%{digital_object_component.title}</strong> updated
         updated: Digital Object Component <strong>%{digital_object_component.title}</strong> updated
+        deleted: Digital Object Component <strong>%{digital_object_component.title}</strong> deleted
       section:
         basic_information: Basic Information
       action:
@@ -231,6 +233,7 @@ en:
       messages:
         created: Event Created
         updated: Event Saved
+        deleted: Event Deleted
       section:
         basic_information: Basic Information
 
@@ -266,6 +269,7 @@ en:
       messages:
         created: Agent Created
         updated: Agent Saved
+        deleted: Agent Deleted
       section:
         basic_information: Basic Information
         name: Names
@@ -281,6 +285,7 @@ en:
         please_select_a_resource_for_transfer: Please choose a Resource
         transfer_success: Successfully transferred Archival Object <strong>%{archival_object.label}</strong> to Resource <strong>%{resource.title}</strong>
         transfer_error: "Unable to transfer Archival Object due to an error or conflict: <pre>%{exception}</pre>"
+        deleted: "Archival Object <strong>%{archival_object.title}</strong> deleted"
       section:
         basic_information: Basic Information
       action:
@@ -293,6 +298,7 @@ en:
         created: "Resource <strong>%{resource.title}</strong> created"
         updated: "Resource <strong>%{resource.title}</strong> updated"
         spawned: "A new Resource has been spawned from Accession <strong>%{accession.title}</strong>"
+        deleted: "Resource <strong>%{resource.title}</strong> deleted"
       section:
         basic_information: Basic Information
         finding_aid: Finding Aid Data
@@ -304,6 +310,7 @@ en:
       messages:
         created: Repository Created
         updated: Repository Saved
+        deleted: Repository Deleted
         selected: Repository is Currently Selected
         selected_short: Selected
         changed: The Repository <strong>%{repository.repo_code}</strong> is now active
@@ -324,6 +331,7 @@ en:
       messages:
         created: Subject Created
         updated: Subject Saved
+        deleted: Subject Deleted
       section:
         basic_information: Basic Information
 
