Switch i18n to the new scheme

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -340,6 +340,7 @@ en:
       messages:
         created: User Created
         updated: User Saved
+        deleted: User Deleted
         error_update: User not saved
         error_create: User not created
       section:
