--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1131,6 +1131,7 @@ en:
       view_suppressed: view suppressed records in this repository
       suppress_archival_record: suppress the major record types in this repository
       delete_archival_record: delete the major record types in this repository
+      delete_event_record: delete event records in this repository
     _singular: Group
     _plural: Groups
 
