WIP first got at a basic RDE form

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -304,6 +304,7 @@ en:
         finding_aid: Finding Aid Data
       action:
         add_child: Add Child
+        rapid_data_entry: Rapid Data Entry
 
   repository:
     _frontend:
