Rename a few files; Get the end to end RDE creation working for both Resources and Components

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -375,3 +375,4 @@ en:
   rde:
     date_type: Date Type
     instance_type: Instance Type
+    success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
