add file_select text

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -167,6 +167,7 @@ en:
     digital_object_csv_title: Import Digital Object Records from a CSV File
     import_report: Import Report
     import_another: Import Another File
+    file_select: Select a file to upload
     submit: Import
     submit_busy_message: Importing...
     messages:
