--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1511,6 +1511,20 @@ en:
     _singular: Enumeration
     _plural: Enumerations
 
+  classification:
+    _singular: Classification
+    _plural: Classifications
+    identifier: Identifier
+    title: Title
+    description: Description
+
+  classification_term:
+    _singular: Classification Term
+    _plural: Classification Terms
+    identifier: Identifier
+    title: Title
+    description: Description
+
   reports:
     CreatedAccessionsReport: Created Accessions
     UnprocessedAccessionsReport: Unprocessed Accessions
