Rollback a tree move if the post returns a 500 error

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
     automate: Automatically generate
     browse: Browse
     cancel: Cancel
+    continue: Continue
     confirm: Confirm
     confirm_removal: Confirm Removal
     container_labels: Download Container Labels
