--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
     unsuppress: Unsuppress
     unsuppress_confirm_title: Unsuppress this Record?
     unsuppress_confirm_message: "false"
+    unable_to_move_message: "Unable to Move Record"
     delete: Delete
     delete_confirm_title: Delete this Record?
     delete_confirm_message: "<p>Please be aware <strong>you cannot undo this action</strong>.</p><p>This action will remove the record from the database, including any references it has to other records.</p>"
