--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -375,4 +375,26 @@ en:
   rde:
     date_type: Date Type
     instance_type: Instance Type
-    success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
+    sections:
+      basic_information: Basic Information
+      date: Date
+      instance: Instance
+      notes: Notes
+    actions:
+      add_row: Add Row
+      submit: Add Children
+      reset: Reset
+      showhide_prefix: "Columns:"
+      showhide_suffix: visible
+      showhide_none: All Columns Filtered
+    messages:
+      success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
+    help:
+      keyboard_shortcuts: |
+                  <div><strong>Keyboard Shortcuts</strong></div>
+                  <div><small><span class="span2">Jump from cell to cell:</span>SHIFT + Arrow Keys</small></div>
+                  <div><small><span class="span2">Create a new row (from last row):</span> SHIFT + Return</small></div>
+      sticky_columns: |
+                  <div><strong>Sticky Columns</strong></div>
+                  <div><small>Highlighted columns are sticky and will be replicated when new rows are added. Toggle 'sticky' by clicking the corresponding table heading.</small></div>
+                  <div><small>Clicking 'Add Row' will copy values from the last row; The row's '+' button will copy values from the currently focused row.</small></div>
