Fix issues raised in PR (unused CSS, extra spaces, + instead of -); and fix error message for date if title is missing;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -388,6 +388,7 @@ en:
       showhide_suffix: visible
       showhide_none: All Columns Filtered
     messages:
+      error_prefix: Row
       success: "<div class='alert alert-success'>Children Created. Refreshing page...</div>"
     help:
       keyboard_shortcuts: |
